[DEBIAN] Changes to debian files
- changelog cleaned
- compat level set to 9
- using short debhelper style (cleans up pretty much debian/rules)
- allow parallel using DEB_BUILD_OPTIONS=parallel=<number>
- enable hardening
- implement suggested changes from debian-mentors mailling list.

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,13 @@
 Source: solarpowerlog
 Section: utils
-Priority: extra
+Priority: optional
 Maintainer: Tobias Frost <tobi@coldtobi.de>
 Build-Depends: autoconf,
                automake,
                autotools-dev,
-               debhelper (>= 7),
+               debhelper (>= 9),
+               dh-autoreconf,
+               hardening-wrapper,
                libboost-dev (>=1.48),
                libboost-program-options-dev,
                libboost-system-dev,
