--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
 ## Makefile.am -- Process this file with automake to produce Makefile.in
 ACLOCAL_AMFLAGS = -I m4
 
-if MAKE_DBIXX 
-	DBIXX_SUBDIRS=extlibs/dbixx
-endif
+#if MAKE_DBIXX 
+#	DBIXX_SUBDIRS=extlibs/dbixx
+#endif
 
 SUBDIRS=$(DBIXX_SUBDIRS) src
 
