[MISC] Adding init.d files, adding buildbot configuration...
The startup-files will be maintained in trunk, as they might be useful not
only for debian packaging.

The buildbot configuration files are added to keep them in th VCS.

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS=$(DBIXX_SUBDIRS) src
 
-EXTRA_DIST = tools/sputnik_simulator example_confs bootstrap.sh
+EXTRA_DIST = tools/sputnik_simulator example_confs bootstrap.sh tools/solarpowerlog.init tools/solarpowerlog.default
 
 # install some extras into the dist files...
 dist_doc_DATA = AUTHORS NEWS README
