[BUILDBOT] buildobt-make-orig-source did not handle new debian versions right.

--- a/tools/buildbot/configuration/master/master.cfg
+++ b/tools/buildbot/configuration/master/master.cfg
@@ -37,17 +37,17 @@ c['change_source'] = []
 
 c['change_source'].append(GitPoller(
         'git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog',
-        workdir='gitpoller-slp-workdir', 
-	branch='trunk', 
+        workdir='gitpoller-slp-workdir',
+	branch='trunk',
 	project='solarpowerlog',
-        pollinterval=300))
+        pollinterval=7200))
 
 c['change_source'].append(GitPoller(
         'git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog',
-        workdir='gitpoller-slp-workdir-deb', 
-	branch='debian', 
+        workdir='gitpoller-slp-workdir-deb',
+	branch='debian',
 	project='solarpowerlog-deb',
-        pollinterval=600))
+        pollinterval=7200))
 
 
 ####### SCHEDULERS
@@ -113,10 +113,12 @@ from buildbot.steps.shell import Compile
 factory = BuildFactory()
 # check out the source
 factory.addStep(Git(
-	repourl='git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog', 
+	repourl='git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog',
 	branch='trunk',
 	mode='update'))
-factory.addStep(Compile())
+factory.addStep(Compile(
+	timeout=3600
+	))
 
 
 from buildbot.config import BuilderConfig
@@ -124,34 +126,44 @@ from buildbot.config import BuilderConfig
 factory2 = BuildFactory()
 # check out the source
 factory2.addStep(Git(
-	repourl='git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog', 
+	repourl='git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog',
 	branch='trunk',
 	mode='copy'))
 factory2.addStep(ShellCommand(
-	command=["./bootstrap.sh", ""], 
+	command=["./bootstrap.sh", ""],
+	timeout=3600,
 	description="Bootstrapping autoconf",
 	descriptionDone ="Bootstrapping done"))
-factory2.addStep(Configure())
-factory2.addStep(Compile())
+factory2.addStep(Configure(
+        timeout=3600
+	))
+factory2.addStep(Compile(
+	timeout=3600
+	))
 
 factory_deb = BuildFactory()
 # check out the source -- debian trunk
 factory_deb.addStep(Git(
-	repourl='git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog', 
+	repourl='git://solarpowerlog.git.sourceforge.net/gitroot/solarpowerlog/solarpowerlog',
 	branch='debian',
 	mode='copy'))
 # bootstrap and make dist
 factory_deb.addStep(ShellCommand(
-	command=["./bootstrap.sh", ""], 
+	command=["./bootstrap.sh", ""],
+	timeout=3600,
 	description="Bootstrapping autoconf",
 	descriptionDone ="Bootstrapping done"))
-factory_deb.addStep(Configure())
+factory_deb.addStep(Configure(
+	timeout=3600
+	))
 factory_deb.addStep(ShellCommand(
-	command=["make", "dist"], 
+	command=["make", "dist"],
+	timeout=3600,
 	description="make dist: Making tar",
 	descriptionDone ="make dist: done"))
 factory_deb.addStep(ShellCommand(
-	command=["make", "distcheck"], 
+	command=["make", "distcheck"],
+	timeout=3600,
 	description="Make distcheck: Checking release tar",
 	descriptionDone ="Make distcheck done"))
 
@@ -159,9 +171,10 @@ factory_deb.addStep(ShellCommand(
 factory_deb.addStep(ShellCommand(
 	command=["bash","-x", "tools/buildbot/buildbot_make_orig_source",""],
 	description="Preparing stagedir"))
-# dpkg-buildpackage 
+# dpkg-buildpackage
 factory_deb.addStep(ShellCommand(
-	command=["bash" ,"-x", "tools/buildbot/buildbot_dpkgbuildpackage"], 
+	command=["bash" ,"-x", "tools/buildbot/buildbot_dpkgbuildpackage"],
+	timeout=3600,
 	description="dpkg-buildpackage",
 	descriptionDone ="dpkg-buildpackage done"))
 # linitian
@@ -171,6 +184,7 @@ factory_deb.addStep(ShellCommand(
 # now build the package in pdebuilder
 factory_deb.addStep(ShellCommand(
 	command=["bash","-x","tools/buildbot/buildbot_pdebuilder"],
+	timeout=3600,
 	description="pdebuilder build"))
 
 
@@ -186,14 +200,14 @@ c['builders'].append(
 c['builders'].append(
     BuilderConfig(name="build-autotools",
       slavenames=["solarpowerlog"],
-      locks= [build_lock.access('exclusive')],	
+      locks= [build_lock.access('exclusive')],
       slavebuilddir='build/solarpowerlog',
       factory=factory2))
 
 c['builders'].append(
     BuilderConfig(name="build-deb",
       slavenames=["solarpowerlog"],
-      locks= [build_lock.access('exclusive')],	
+      locks= [build_lock.access('exclusive')],
       slavebuilddir='build/solarpowerlog-deb',
       factory=factory_deb))
 
