[Sputnik Inverter] Refactor the command handling -- preparation commit.
The new class CSputnikCommand will handle the commands for the Inverter,
implementing the commands as an kind of strategy pattern, encapsulating the
data handling and the command date.

This commmit adds the class, but does not yet start using it.
(as some prepartion/rework  in other parts of solarpowerlog is needed to fully
support/enable this concept)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,6 +32,7 @@ Connections/CSharedConnectionSlave.cpp Connections/CConnectSerialAsio.cpp \
 Connections/factories/IConnectFactory.cpp Connections/CConnectTCPAsio.cpp \
 solarpowerlog.cpp Inverters/SputnikEngineering/CInverterFactorySputnik.cpp \
 Inverters/SputnikEngineering/CInverterSputnikSSeries.cpp \
+Inverters/SputnikEngineering/CSputnikCommand.cpp \
 Inverters/DummyInverter/CInverterDummy.cpp  \
 Inverters/DummyInverter/CInverterFactoryDummy.cpp \
 Inverters/interfaces/CNestedCapaIterator.cpp \
@@ -58,6 +59,7 @@ Connections/CSharedConnectionSlave.h Connections/CConnectSerialAsio.h \
 Connections/factories/IConnectFactory.h Connections/CConnectTCPAsio.h \
 Inverters/SputnikEngineering/CInverterFactorySputnik.h \
 Inverters/SputnikEngineering/CInverterSputnikSSeries.h \
+Inverters/SputnikEngineering/CSputnikCommand.h \
 Inverters/DummyInverter/CInverterDummy.h  \
 Inverters/DummyInverter/CInverterFactoryDummy.h \
 Inverters/interfaces/CNestedCapaIterator.h \
