--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,8 @@ Connections/factories/IConnectFactory.cpp Connections/CConnectTCPAsio.cpp \
 solarpowerlog.cpp Inverters/SputnikEngineering/CInverterFactorySputnik.cpp \
 Inverters/SputnikEngineering/CInverterSputnikSSeries.cpp \
 Inverters/SputnikEngineering/CSputnikCommand.cpp \
+Inverters/SputnikEngineering/ISputnikCommand.cpp \
+Inverters/SputnikEngineering/CSputnikCommandSoftwareVersion.cpp \
 Inverters/DummyInverter/CInverterDummy.cpp  \
 Inverters/DummyInverter/CInverterFactoryDummy.cpp \
 Inverters/interfaces/CNestedCapaIterator.cpp \
@@ -60,6 +62,8 @@ Connections/factories/IConnectFactory.h Connections/CConnectTCPAsio.h \
 Inverters/SputnikEngineering/CInverterFactorySputnik.h \
 Inverters/SputnikEngineering/CInverterSputnikSSeries.h \
 Inverters/SputnikEngineering/CSputnikCommand.h \
+Inverters/SputnikEngineering/ISputnikCommand.h \
+Inverters/SputnikEngineering/CSputnikCommandSoftwareVersion.h \
 Inverters/DummyInverter/CInverterDummy.h  \
 Inverters/DummyInverter/CInverterFactoryDummy.h \
 Inverters/interfaces/CNestedCapaIterator.h \
