--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,6 +35,8 @@ Inverters/SputnikEngineering/CInverterSputnikSSeries.cpp \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommand.cpp \
 Inverters/SputnikEngineering/SputnikCommand/ISputnikCommand.cpp \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSoftwareVersion.cpp \
+Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSYS.cpp \
+Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandTYP.cpp \
 Inverters/DummyInverter/CInverterDummy.cpp  \
 Inverters/DummyInverter/CInverterFactoryDummy.cpp \
 Inverters/interfaces/CNestedCapaIterator.cpp \
@@ -64,6 +66,8 @@ Inverters/SputnikEngineering/CInverterSputnikSSeries.h \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommand.h \
 Inverters/SputnikEngineering/SputnikCommand/ISputnikCommand.h \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSoftwareVersion.h \
+Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSYS.h \
+Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandTYP.h \
 Inverters/DummyInverter/CInverterDummy.h  \
 Inverters/DummyInverter/CInverterFactoryDummy.h \
 Inverters/interfaces/CNestedCapaIterator.h \
