[CSputnikCommand inteface] Backup checkin (working on the backoff strategies)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,6 +37,7 @@ Inverters/SputnikEngineering/SputnikCommand/ISputnikCommand.cpp \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSoftwareVersion.cpp \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSYS.cpp \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandTYP.cpp \
+Inverters/SputnikEngineering/SputnikCommand/BackoffStrategies/ISputnikCommandBackoffStrategy.cpp \
 Inverters/DummyInverter/CInverterDummy.cpp  \
 Inverters/DummyInverter/CInverterFactoryDummy.cpp \
 Inverters/interfaces/CNestedCapaIterator.cpp \
@@ -68,6 +69,7 @@ Inverters/SputnikEngineering/SputnikCommand/ISputnikCommand.h \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSoftwareVersion.h \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandSYS.h \
 Inverters/SputnikEngineering/SputnikCommand/CSputnikCommandTYP.h \
+Inverters/SputnikEngineering/SputnikCommand/BackoffStrategies/ISputnikCommandBackoffStrategy.h \
 Inverters/DummyInverter/CInverterDummy.h  \
 Inverters/DummyInverter/CInverterFactoryDummy.h \
 Inverters/interfaces/CNestedCapaIterator.h \
