[Sputnik Simulator] Added control server -- but not yet debugged.
Updated solarpowerlog_simulator.conf to show how to configure
the control server.

--- a/example_confs/solarpowerlog.conf
+++ b/example_confs/solarpowerlog.conf
@@ -18,7 +18,7 @@ application:
     # configuration file to load for liblog4cxx
     # see the liblog4cxx docs for details.
     # (http://http://logging.apache.org/log4cxx/index.html)
-    # With the configuration file you can specify different log files for 
+    # With the configuration file you can specify different log files for
     # different components of the program.
     # note, that if not given everything will be logged to the console.
 
@@ -49,7 +49,9 @@ inverter :
             manufactor =  "SPUTNIK_ENGINEERING";
 
             # (REQUIRED) Which model we about to talk too
-            # Your choice is "S-Series" (currently)
+            # Your choice is at the moment "S-Series" or "Simulator".
+            # (To obtain the list of choice, comment this line and run
+            # solarpowerlog -- it will tell you the valid options.)
             model ="S-Series";
 
             # Communication address of the inverter (as set in the communication
@@ -150,7 +152,7 @@ logger:
             # note, in this example you could also refer to the simple dumper 1
             # so you could also write
             # this is important in cases where you "plug" some filters which
-            # modifies some results... 
+            # modifies some results...
             # datasource = "Simple Dumper 1";
 
             # Again, the CVS writer has some parameter -- also see the wiki...
@@ -162,7 +164,7 @@ logger:
             # also write the %s in the path.
             logfile="/tmp/Inverter1_%s.csv";
 
-            # if set to true, we'll rotate the file at midnight? (create new 
+            # if set to true, we'll rotate the file at midnight? (create new
             # file at midnight)
             # Otherwise we just append until end of times....
             rotate=true;
