--- a/example_confs/solarpowerlog_simulator.conf
+++ b/example_confs/solarpowerlog_simulator.conf
@@ -75,8 +75,17 @@ inverter :
 
     # Communication address of the simulator
     commadr = 1;
+
+    # Control server.
+    ctrl_comms = {
+	comms = "TCP/IP";
+	tcpmode = "server";
+	tcpadr = "127.0.0.1";
+	tcpport = 12346;
+     };
+
     }
-     );
+   );
 };
 
 
