[SputnikSimulator] Ctrl-Server enhancements
You can now feed the control server a sputnik telegramm and it will parse them completly.
(This was already present, but a bug prevented it from work correctly)

Also, the commands to be answered can now be disabled/enabled through the controlserver
just say, for example, "PIN=off" ("PIN=on") to disable (enable) the command PIN.
When disabled, PIN will no more answered if queried from solarpowerlog.

For instructions how to use the simulator, read tools/sputnik_simulator/README

(Second change: Add copyright information to the old netcat based simulator)

--- a/example_confs/solarpowerlog_simulator.conf
+++ b/example_confs/solarpowerlog_simulator.conf
@@ -6,6 +6,9 @@
 # This example file shows how to enable the "internal" Sputnik simulator.
 # Note that the logger section can be empty, but must be present.
 
+# NOTE: For instructions how to use the simulator, please read
+# tools/sputnik_simulator/README
+
 application:
 {
   # what debuglevel should be used if not specified by any component
