[CSputnikSimulator] Adding command "ADR" which tells the inverter adress and let TYP be set by config
Note: This command is only supported by the simulator. The standard answer
will be set by the commadr setting.

Also, the config file can now specify the answer to the TYP command.

--- a/example_confs/solarpowerlog_simulator.conf
+++ b/example_confs/solarpowerlog_simulator.conf
@@ -52,6 +52,19 @@ inverter :
     # (To obtain the list of choice, comment this line and run solarpowerlog
     # --  it    will tell you the valid options.)
     model ="Simulator";
+    
+    # (optional) TYP defines the model identifie used by Sputnik Engineering to identfy
+    # their modules.
+    # The default value is, 65534 (0xFFFE) is not defined by Sputnik Engineering
+    # but helps to identify that the simulator has been used in e.g. log files.
+    # See the CSputnikCommandTYP.cpp for (known) values.
+    # some examples
+    # note that you can also set this value at runtimne via the ctrl server.
+    # type there TYP=<type>, for example TYP=2001
+    #TYP=2001; #"SolarMax 2000 E"
+    #TYP=2010; #"SolarMax 2000 C"
+    #TYP=20010; #"SolarMax 2000 S"
+    #TYP=20030; #"SolarMax 4200 S"
 
     # (REQUIRED BY SPUTNIK, S-Series)
     # mode of communication
