[SputnikSimulator] s/PAL/SAL from last commit.

--- a/example_confs/solarpowerlog_simulator.conf
+++ b/example_confs/solarpowerlog_simulator.conf
@@ -16,7 +16,7 @@ application:
   # optional. If not given, it defaults to "ERROR"
   # Note, if specified a logconfig file, the config file can override this
   # setting.
-  dbglevel = "ALL";
+  dbglevel = "TRACE";
 
   # configuration file to load for liblog4cxx
   # see the liblog4cxx docs for details.
