--- a/tools/sputnik_simulator/solarpowerlog.conf
+++ b/tools/sputnik_simulator/solarpowerlog.conf
@@ -33,7 +33,6 @@ inverter :
 	 inverters = ( 
   		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the program)
   		  name   = "Netcat";
-  		  dbglevel = "INFO";
     
   		  # (REQUIRED) "Human Readable Description of the fine piece of hardware. Not interpreted by this software"
   		  description = "A Inverter inverting";
@@ -62,7 +61,7 @@ inverter :
           # optional: Wait maximum this time to connect to the inverter.
           # default: 3 seconds (value: 3000)
           # Note: Currently blocks the logger until timeout or connection! 
-          tcptimeout = 3000;
+          tcptimeout = 5000;
           
           # Communication address of the inverter (as set in the menu of the inverter)
           commadr = 1;
@@ -75,7 +74,7 @@ inverter :
           # after one query has been answered.
           # The value can be a float.  
           # This value is optional and defaults to 5 seconds
-          queryinterval= 5;
+          queryinterval= 3;
 		}
      );
 };
@@ -96,7 +95,7 @@ logger:
 			# of the file, formated after ISO 8601: YYYY-MM-DD )
 			# Note: If you proved the directory by e.g cron, you can
 			# also write the %s in the path.
-			logfile="/var/www/Inverter1_%s.csv";
+			logfile="/tmp/Inverter1_%s.csv";
 			# Rotate the file at midnight?
 			rotate=true;
 			# What should we log
