--- a/example_confs/solarpowerlog.conf
+++ b/example_confs/solarpowerlog.conf
@@ -54,6 +54,14 @@ inverter :
             # solarpowerlog -- it will tell you the valid options.)
             model ="S-Series";
 
+	    # Disable commands used for 3-phase invertes
+	    # This optional command reduced the amount of commands sent to the inverter
+	    # by the ones specific for 3-phase inverters.
+            # (Even single-phase inverters answeres those. Benefit is just less "traffic"
+	    # to the invertes.
+            # defaults to false, "not disabled", say "true" to disable the commands.
+            disable_3phase_commands = false
+
             # Communication address of the inverter (as set in the communication
             # menu of the inverter)
             commadr = 1;
