[example confs] cleanup whitespaces.

--- a/example_confs/solarpowerlog_simulator.conf
+++ b/example_confs/solarpowerlog_simulator.conf
@@ -11,28 +11,28 @@
 
 application:
 {
-  # what debuglevel should be used if not specified by any component
-  # Choose out of ALL, TRACE, DEBUG, INFO, WARN, ERROR ,FATAL and NONE
-  # optional. If not given, it defaults to "ERROR"
-  # Note, if specified a logconfig file, the config file can override this
-  # setting.
-  dbglevel = "TRACE";
+# what debuglevel should be used if not specified by any component
+# Choose out of ALL, TRACE, DEBUG, INFO, WARN, ERROR ,FATAL and NONE
+# optional. If not given, it defaults to "ERROR"
+# Note, if specified a logconfig file, the config file can override this
+# setting.
+dbglevel = "DEBUG"
 
-  # configuration file to load for liblog4cxx
-  # see the liblog4cxx docs for details.
-  # (http://http://logging.apache.org/log4cxx/index.html)
-  # With the configuration file you can specify different log files for
-  # different components of the program.
-  # note, that if not given it will log everything to the console.
-  # note: if the filename ends with .xml, libconfig tries to load the
-  # configuration in xml-format, which allows even more tweaks.
-  #logconfig = "solarpowerlog_lib4cxx.conf";
-  #logconfig = "solarpowerlog_lib4cxx.xml";
+# configuration file to load for liblog4cxx
+# see the liblog4cxx docs for details.
+# (http://http://logging.apache.org/log4cxx/index.html)
+# With the configuration file you can specify different log files for
+# different components of the program.
+# note, that if not given it will log everything to the console.
+# note: if the filename ends with .xml, libconfig tries to load the
+# configuration in xml-format, which allows even more tweaks.
+#logconfig = "solarpowerlog_lib4cxx.conf";
+#logconfig = "solarpowerlog_lib4cxx.xml";
 };
 
 inverter :
 {
-  inverters = (
+inverters = (
     {
     # (REQUIRED) Name of the Inverter (Will be used as reference in the program)
     name   = "Simulator";
@@ -52,7 +52,7 @@ inverter :
     # (To obtain the list of choice, comment this line and run solarpowerlog
     # --  it    will tell you the valid options.)
     model ="Simulator";
-    
+
     # (optional) TYP defines the model identifie used by Sputnik Engineering to identfy
     # their modules.
     # The default value is, 65534 (0xFFFE) is not defined by Sputnik Engineering
@@ -94,18 +94,18 @@ inverter :
 
     # Control server.
     ctrl_comms = {
-	comms = "TCP/IP";
-	tcpmode = "server";
-	tcpadr = "127.0.0.1";
-	tcpport = 12346;
-     };
+    comms = "TCP/IP";
+    tcpmode = "server";
+    tcpadr = "127.0.0.1";
+    tcpport = 12346;
+    };
 
     }
-   );
+);
 };
 
 
 logger:
 {
-	loggers = ();
+    loggers = ();
 };
