--- a/tools/sputnik_simulator/solarpowerlog.conf
+++ b/tools/sputnik_simulator/solarpowerlog.conf
@@ -160,7 +160,7 @@ logger:
             # format: YYYY-MM-DD. When there is no %s, the file will be replaced
             # on midnight.
             # This option is required.
-            htmlfile="/tmp/larpowerlog-%s.html";
+            htmlfile="/var/www/solarpowerlog-%s.html";
 
             # Template file to be used
             # This file will be loaded as template... Mandatory.
