[example configuration] Adding solarpowerlog_serial.conf to explain the options.
Also some work on the "normal" solarpowerlog.conf to depreciate the tcptimeout parameter.

--- a/example_confs/solarpowerlog.conf
+++ b/example_confs/solarpowerlog.conf
@@ -54,11 +54,11 @@ inverter :
             # solarpowerlog -- it will tell you the valid options.)
             model ="S-Series";
 
-        # Disable commands used for 3-phase invertes
-        # This optional command reduced the amount of commands sent to the inverter
-        # by the ones specific for 3-phase inverters.
+            # Disable commands used for 3-phase invertes
+            # This optional command reduced the amount of commands sent to the inverter
+            # by the ones specific for 3-phase inverters.
             # (Even single-phase inverters answeres those. Benefit is just less "traffic"
-        # to the invertes.
+            # to the invertes.
             # defaults to false, "not disabled", say "true" to disable the commands.
             disable_3phase_commands = false
 
@@ -92,10 +92,13 @@ inverter :
             tcpadr =  "192.168.0.20";
             tcpport = "12345";
 
-            # (optional) Wait maximum this time to connect to the inverter.
+            # (optional,depreciated)
+            # Use this timeout value for all TCP/IP transcations.
+            # Usually this parameter is set by the inverters at runtime,
+            # so this parameter might not be considered.
+            # It is depreciated and will be removed in a later
+            # release of solarpowerlog.
             # default: 3 seconds (value: 3000)
-            # Note: Currently blocks the logger until timeout or connection!
-            # NOTE: FEATURE CURRENTLY NOT IMPLEMENTED!
             tcptimeout = 3000;
         }
         , #### second inverter ####
