[example_confs] Adding some example confs used for debugging showing the shared comms.

--- a/example_confs/solarpowerlog_shared.conf
+++ b/example_confs/solarpowerlog_shared.conf
@@ -12,8 +12,8 @@ application:
 	# optional. If not given, it defaults to "ERROR"
 	# Note, if specified a logconfig file, the config file can override this
 	# setting.
-	dbglevel = "ALL";
-	
+	dbglevel = "TRACE";
+
 	# configuration file to load for liblog4cxx
 	# see the liblog4cxx docs for details.
 	# (http://http://logging.apache.org/log4cxx/index.html)
@@ -37,19 +37,20 @@ inverter :
 		  model = "dontcare";
 		  comms = "SharedConnection";
 		  sharedconnection_type = "master";
-
+dbglevel = "DEBUG";
 		   realcomms = {
                 	comms = "TCP/IP";
 	                tcpadr =  "127.0.0.1";
         	        tcpport = "12345";
 	                tcptimeout = 3000;
+			dbglevel = "TRACE";
 		   };
 	},
-	{ # (REQUIRED) Name of the Inverter (Will be used as reference in the program)
+	{
   		  name   = "Netcat_1";
-  		  dbglevel = "ALL";
-    
-  		  # (REQUIRED) "Human Readable Description of the fine piece of hardware. Not interpreted by this software"
+  		  dbglevel = "DEBUG";
+
+
   		  description = "A Inverter inverting";
 
   		  # (REQUIRED) Selects the family of the inverters.
@@ -83,6 +84,14 @@ inverter :
           # The value can be a float.
           # This value is optional and defaults to 5 seconds
           queryinterval= 5;
+
+           realcomms = {
+                    comms = "TCP/IP";
+                    tcpadr =  "127.0.0.1";
+                    tcpport = "12345";
+                    tcptimeout = 3000;
+           };
+
 	}
      );
 };
@@ -91,7 +100,7 @@ inverter :
 logger:
 {
 	loggers = (
-		{ 
+/*		{
 			# This dumper is known as (required)
 			name = "CVS_Netcat_1";
 			# It is of type
@@ -201,7 +210,7 @@ logger:
             );
 
             }
-            
+*/
 		);
 };
 
