[example-confs] moved simulator related confs to own subdir
and removing the old netcat based simulator scripts.

--- a/example_confs/simulator/solarpowerlog.conf
+++ b/example_confs/simulator/solarpowerlog.conf
@@ -1,8 +1,8 @@
-# This is a sample configuation file for solarpowerlog.
+# This sample configuration shows how to connect with the simulator,
+# coigured in the examples_confs/solarpowerlog_simulator files working with the embedded simulator
 #
 # Please note, the file is parsed by libconfig.
 
-# Currently, this is quite boring -- as under developement.
 
 application:
 {
@@ -196,15 +196,3 @@ logger:
         );
 };
 
-
-# Parameter for the formatter stripwebroot:
-# for the stripwebroot formatter, you need to specify what is
-# the webroot, the filesystem location of your webserver.
-# In other words, this part is stripped away from filenames to
-# let them work in the HTML doc.
-# example: your csv is in /var/www/solar/xxx.csv
-# your webserver's root is /var/www/
-# so a webrowser access the csv, it has to be /solar/xxx.csv
-# in the html. Therefore /var/www has to be stripped.
-# (as this is also the default in many linux systems, this is
-# used if not specified here)
