[MISC] adding copyright to the .init and .default file, do not distribute everthing in tools

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS=$(DBIXX_SUBDIRS) src
 
-EXTRA_DIST = example_confs bootstrap.sh tools src/ctemplate/README
+EXTRA_DIST = example_confs bootstrap.sh tools/solarpowerlog.init tools/solarpowerlog.default tools/solarpowerlog.logrotate src/ctemplate/README
 
 # install some extras into the dist files...
 dist_doc_DATA = AUTHORS NEWS README GPL GPL-3 LGPL-3 PLAN COPYRIGHT
