Missing B-D on libboost-date-time-dev

--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: autoconf,
                dh-autoreconf,
                hardening-wrapper,
                libboost-dev (>=1.48),
+               libboost-date-time-dev,
                libboost-program-options-dev,
                libboost-system-dev,
                libboost-thread-dev,
