--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: autoconf,
                autotools-dev,
                debhelper (>= 9),
                dh-autoreconf,
-               hardening-wrapper,
+               dpkg-dev (>=1.16.1~),
                libboost-dev (>=1.48),
                libboost-date-time-dev,
                libboost-program-options-dev,
