--- a/debian/rules
+++ b/debian/rules
@@ -3,14 +3,17 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+# enable hardening
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+CXXFLAGS+=$(CPPFLAGS)
+
 # Support parallel build
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
    NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
    MAKEFLAGS += -j$(NUMJOBS)
 endif
-
-# enable hardening
-export DEB_BUILD_HARDENING=1
 
 %:
 	dh $@ --with autoreconf
