--- a/debian/rules
+++ b/debian/rules
@@ -29,3 +29,9 @@ override_dh_clean:
 	dh_clean
 	rm -f debian/solarpowerlog.init debian/solarpowerlog.default
 	rm -f config/ltmain.sh m4/libtool.m4
+
+
+override_dh_installdocs:
+	# do not install the GPL / LGPL license files
+	exit 1 
+	dh_installdocs -X GPL
